<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/yon_sil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/anasayfa_menu_kategori_ekle_en"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/yon_ayarlar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/anasayfa_menu_ayarlar_en" />
    <item
        android:id="@+id/yon_cikis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/anasayfa_menu_cikis_yap_en" />
</menu>