<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_text_cerceve_rengi_ters"
    tools:context=".Views.UyeOlActivity">

    <Button
        android:id="@+id/buttonOlusturUyelik"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/arkaplan_rengi"
        android:text="@string/giris_sayfasi_uye_ol_en"
        android:textColor="@color/metin_rengi"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOlusturSifre"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/editTextOlusturIsim"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_cerceve_rengi"
        android:ems="10"
        android:hint="@string/ayarlar_etIsım_en"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/metin_rengi"
        android:textColorHint="@color/metin_rengi"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBaslikUyeOl" />

    <EditText
        android:id="@+id/editTextOlusturSifre"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_cerceve_rengi"
        android:ems="10"
        android:hint="@string/ayarlar_etSifre_en"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/metin_rengi"
        android:textColorHint="@color/metin_rengi"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOlusturMail"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextOlusturMail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_cerceve_rengi"
        android:ems="10"
        android:hint="@string/ayarlar_etMail_en"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/metin_rengi"
        android:textColorHint="@color/metin_rengi"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOlusturSoyisim" />

    <EditText
        android:id="@+id/editTextOlusturSoyisim"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_cerceve_rengi"
        android:ems="10"
        android:hint="@string/ayarlar_etSoyisim_en"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/metin_rengi"
        android:textColorHint="@color/metin_rengi"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOlusturIsim" />

    <TextView
        android:id="@+id/textViewBaslikUyeOl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uye_ol_baslik_en"
        android:textAlignment="center"
        android:textColor="@color/metin_rengi"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />


</androidx.constraintlayout.widget.ConstraintLayout>