<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anaRenk"
    tools:context=".Views.SifreOnerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBaslik"
        android:layout_width="232dp"
        android:layout_height="78dp"
        android:background="@drawable/ustten_yuvarlak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSelamOneri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sifre_oner_baslik_en"
            android:textColor="@color/anaRenk"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSol"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:background="@drawable/sagdan_yuvarlak"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245">

        <Button
            android:id="@+id/buttonOlusturSifre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/anaRenk"
            android:text="@string/sifre_oner_buton_olustur_en"
            android:textColor="#000000"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewSayiUzunluk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="8"
            android:textColor="@color/anaRenk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seekBarSayiUzunluk"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.667" />

        <SeekBar
            android:id="@+id/seekBarSayiUzunluk"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:max="100"
            android:min="8"
            android:progressBackgroundTint="@color/anaRenk"
            android:thumbTint="@color/anaRenk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sifre_oner_txt_sifre_uzunlugu_en"
            android:textColor="@color/anaRenk"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.519" />

        <CheckBox
            android:id="@+id/checkBoxSayi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/anaRenk"
            android:text="[1,2,3,4]"
            android:textColor="@color/anaRenk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxOzelKarakter"
            app:layout_constraintStart_toEndOf="@+id/checkBoxHarfTipi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <CheckBox
            android:id="@+id/checkBoxOzelKarakter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/anaRenk"
            android:text="[:-/)]"
            android:textColor="@color/anaRenk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <CheckBox
            android:id="@+id/checkBoxHarfTipi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/anaRenk"
            android:text="[A,a,B,b]"
            android:textColor="@color/anaRenk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxSayi"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <TextView
            android:id="@+id/textViewIcerikbilgi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sifre_oner_txt_sifre_icerigi_en"
            android:textColor="@color/anaRenk"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSag"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:background="@drawable/soldan_yuvarlak"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923">

        <TextView
            android:id="@+id/textViewBilgiSifre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sifre_oner_txt_sifre_en"
            android:textColor="@color/anaRenk"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewKopyala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_content_copy_24"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.427" />

        <EditText
            android:id="@+id/editTextBilgiSifre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/baseline_lock_person_24"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/sifre_oner_bilgi_burada_gorunecek_en"
            android:inputType="textMultiLine"
            android:paddingStart="15dp"
            android:textColor="@color/anaRenk"
            android:textColorHint="@color/anaRenk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>